--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.2",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
